# arduboy-manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  arduino-cli-build.bash  avrdude-wrapper  games.csv  vcpkg.json
include/: GameWidget.h  MainWindow.h  utils.h
share/apps/1nvader/: app.hex
share/apps/2PlayersPack/: app.hex
share/apps/ABAsmDP1/: app.hex
share/apps/AIArduboy/: app.hex
share/apps/AMaze/: app.hex
share/apps/ASE/: app.hex
share/apps/Abshell/: app.hex
share/apps/AlmostPong/: app.hex
share/apps/Apara/: app.hex
share/apps/Arcodia/: app.hex
share/apps/Arddriving/: app.hex
share/apps/ArduBoyng/: app.hex
share/apps/ArduBuggy/: app.hex
share/apps/ArduIndy/: app.hex
share/apps/ArduJudge/: app.hex
share/apps/ArduLO/: app.hex
share/apps/Arduboy-2048/: app.hex
share/apps/Arduboy5x5/: app.hex
share/apps/ArduboyLife/: app.hex
share/apps/ArduboyLightMeter/: app.hex
share/apps/Arduboysays/: app.hex
share/apps/Arduchess/: app.hex
share/apps/Arducross/: app.hex
share/apps/Ardulem/: app.hex
share/apps/Arduslide/: app.hex
share/apps/Arena/: app.hex
share/apps/Astarok/: app.hex
share/apps/AthleticBoy/: app.hex
share/apps/BattleForZ/: app.hex
share/apps/BeamEmUp/: app.hex
share/apps/BipBipBip/: app.hex
share/apps/Blackjack/: app.hex
share/apps/BladeRunner/: app.hex
share/apps/BlockStacker/: app.hex
share/apps/Blocks/: app.hex
share/apps/Borisgoesskiing/: app.hex
share/apps/BreakTheCode/: app.hex
share/apps/Breakout-v/: app.hex
share/apps/BurgardTime/: app.hex
share/apps/ButtonsTrail/: app.hex
share/apps/Calculate/: app.hex
share/apps/Calendar/: app.hex
share/apps/Cascade/: app.hex
share/apps/CastleBoy/: app.hex
share/apps/Chirp/: app.hex
share/apps/Choplifter/: app.hex
share/apps/CosmicPods/: app.hex
share/apps/CountDown/: app.hex
share/apps/CowBro/: app.hex
share/apps/Crateconfusion/: app.hex
share/apps/Crates3d/: app.hex
share/apps/CrazyKart/: app.hex
share/apps/Cribbage/: app.hex
share/apps/Cutie_E/: app.hex
share/apps/CyberHack/: app.hex
share/apps/Dancerow/: app.hex
share/apps/Darkstar/: app.hex
share/apps/Diceoffate/: app.hex
share/apps/Dominoes/: app.hex
share/apps/Evade/: app.hex
share/apps/Evade2/: app.hex
share/apps/Farkle/: app.hex
share/apps/Fatsche/: app.hex
share/apps/Flappo/: app.hex
share/apps/Flappyball/: app.hex
share/apps/Flappybird/: app.hex
share/apps/Floodfill/: app.hex
share/apps/FloorFall/: app.hex
share/apps/ForestTrader/: app.hex
share/apps/Glove/: app.hex
share/apps/Hangman/: app.hex
share/apps/HarambesRevenge/: app.hex
share/apps/Helii/: app.hex
share/apps/HelloCommander/: app.hex
share/apps/HumanityRevenge/: app.hex
share/apps/Incher/: app.hex
share/apps/JCGOL/: app.hex
share/apps/Jelliboi/: app.hex
share/apps/Jetpac/: app.hex
share/apps/JumpBoy/: app.hex
share/apps/JumpBoy2/: app.hex
share/apps/JumpingJack/: app.hex
share/apps/Junofirst/: app.hex
share/apps/Kube/: app.hex
share/apps/LATE/: app.hex
share/apps/LaserMaze/: app.hex
share/apps/LayingPipe/: app.hex
share/apps/LiteOut/: app.hex
share/apps/Logix/: app.hex
share/apps/LongCat/: app.hex
share/apps/LoveTester/: app.hex
share/apps/Loverush/: app.hex
share/apps/MallARDHunt/: app.hex
share/apps/Mastermind/: app.hex
share/apps/Mazogs/: app.hex
share/apps/MicroCheckers/: app.hex
share/apps/Millipe/: app.hex
share/apps/Minesweeper/: app.hex
share/apps/MiniRogue/: app.hex
share/apps/MissSnake/: app.hex
share/apps/Monpals/: app.hex
share/apps/MorseCodeWriter/: app.hex
share/apps/MysticBalloon/: app.hex
share/apps/NewBlocksOnTheKid/: app.hex
share/apps/NightRaid/: app.hex
share/apps/NumberMind/: app.hex
share/apps/O/: app.hex
share/apps/OBS/: app.hex
share/apps/OctetNight/: app.hex
share/apps/OldMiner/: app.hex
share/apps/OmegaChase/: app.hex
share/apps/OrbitalWarden/: app.hex
share/apps/PawnPath/: app.hex
share/apps/PegSolitaire/: app.hex
share/apps/Phos/: app.hex
share/apps/Picross/: app.hex
share/apps/PipeBoy/: app.hex
share/apps/Piracy/: app.hex
share/apps/PlayNote/: app.hex
share/apps/Pocketchi/: app.hex
share/apps/Pyoro_1/: app.hex
share/apps/Quadrastic/: app.hex
share/apps/Randocity/: app.hex
share/apps/RavineDespoiler/: app.hex
share/apps/RickArduous/: app.hex
share/apps/Roshambo/: app.hex
share/apps/RowFarm/: app.hex
share/apps/SFCave/: app.hex
share/apps/SOS/: app.hex
share/apps/SeaBattle/: app.hex
share/apps/SkateArdDie/: app.hex
share/apps/Slide-XL/: app.hex
share/apps/SpaceFighter/: app.hex
share/apps/SpaceKnife/: app.hex
share/apps/SquareNose/: app.hex
share/apps/Squario/: app.hex
share/apps/SquidJump/: app.hex
share/apps/Starfighter/: app.hex
share/apps/StellarImpact/: app.hex
share/apps/StonkSimulator/: app.hex
share/apps/StreetRacer/: app.hex
share/apps/Technomonkey/: app.hex
share/apps/TheBounce/: app.hex
share/apps/TheQuestForTruth/: app.hex
share/apps/TinyDash/: app.hex
share/apps/To/: app.hex
share/apps/TowerOfPain/: app.hex
share/apps/Trenchrun/: app.hex
share/apps/Tres/: app.hex
share/apps/UAPsMustDIE/: app.hex
share/apps/Vermuino/: app.hex
share/apps/VideoPoker/: app.hex
share/apps/XmasGame/: app.hex
share/apps/YouWontSurvive/: app.hex
share/apps/ZooEscape/: app.hex
share/apps/abSynthFM/: app.hex
share/apps/apollo/: app.hex
share/apps/ardubrain/: app.hex
share/apps/ardubullets/: app.hex
share/apps/arduloop/: app.hex
share/apps/asteroids/: app.hex
share/apps/banana_rocker/: app.hex
share/apps/bounce/: app.hex
share/apps/brainfxck/: app.hex
share/apps/chickenlauncher/: app.hex
share/apps/chiemagari/: app.hex
share/apps/chribocchi/: app.hex
share/apps/circuitdude/: app.hex
share/apps/cistercia/: app.hex
share/apps/cooties/: app.hex
share/apps/diamonds/: app.hex
share/apps/eggmaster/: app.hex
share/apps/evasion/: app.hex
share/apps/fidget/: app.hex
src/: GameWidget.cpp  MainWindow.cpp  main.cpp  utils.cpp
ui/: GameWidget.ui  MainWindow.ui
(+56 files in other folders)
